--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "webpack": "^3.6.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1"
+  },
+  "devDependencies": {
+    "cypress": "^3.1.0"
   }
 }
