--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "webpack-hot-middleware": "^2.19.1"
   },
   "devDependencies": {
-    "cypress": "^3.1.0"
+    "cypress": "^3.1.0",
+    "react-test-renderer": "^16.6.0"
   }
 }
