--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "webpack-hot-middleware": "^2.19.1"
   },
   "devDependencies": {
-    "cypress": "^3.1.0",
+    "cypress": "^3.1.1",
+    "cypress-react-unit-test": "^1.2.1",
     "react-test-renderer": "^16.6.0"
   }
 }
